--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seed": "node scripts/seed.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "connect-mongo": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
+    "express-session": "^1.19.0",
     "mongodb": "^7.0.0",
     "sqlite3": "^5.1.7"
   },
